[B]Version 1.1.49[/B]